--- a/resources/html_sidebar_content/FICHE.htm
+++ b/resources/html_sidebar_content/FICHE.htm
@@ -271,7 +271,8 @@
 
 </head>
 <body>
-  <h3>Rechercher une parcelle</h3>
+  <h3>Rechercher une parcelle et générer un rapport</h3>
+  <p>Rappel : un code parcelle se compose du code INSEE de la commune concernée, suivi d'un espace puis de la section et du numéro de la parcelle.</p>
 
   <input type="text" id="search-input" placeholder="Ex: 76000 A123" />
   <button id="search-btn">Rechercher</button>
